# accelerator

./: .gitignore  docker-compose.nginx-only.yml  docker-compose.yml
backend/: Dockerfile  config.py  example.env  pyproject.toml
backend/api/: urls.py
backend/api/migrations/: 0001_initial.py  0002_cityobject_lat_cityobject_lng_alter_event_end_date_and_more.py  0003_remove_cityobject_object_type_remove_event_sport_and_more.py  0004_remove_cityobject_sport_cityobject_object_type.py  0005_cityobject_sport_event_sport_invitation_sport.py  0006_alter_cityobject_sport_alter_event_sport_and_more.py  0007_event_type_event.py
backend/api/models/: __init__.py  city_object.py  event.py  invitation.py  object_type.py  sport.py
backend/api/serializers/: city_object.py  event.py  invitation.py  object_type.py  sport.py
backend/api/views/: city_object.py  event.py  invitation.py  object_type.py  sport.py
backend/conf/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/assets/: README.md
frontend/src/: App.js  index.js
frontend/src/api/: city_object.js  event.js  object_type.js  sport.js
frontend/src/components/: Header.js  Hero.js  Layout.js  customMarkerIcon.js
frontend/src/components/styles/: header.css  hero.css
frontend/src/pages/: AllEventsPage.js  CalendarPage.js  CustomEventsPage.js  MainPage.js  MapPage.js  MapPageWrapper.js  ProfessionalEventsPage.js
frontend/src/pages/styles/: allevents.css  calendarpage.css  mainpage.css  (+2 more)
frontend/src/styles/: global.css  theme.css
nginx/: nginx.conf  temp_default.conf
